--- a/index.html
+++ b/index.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link href="./stylesheet.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container">
+        <div class="Calculator">
+            <div class="Row">
+                <button class="operator">AC</button>
+                <button class="operator">C</button>
+                <button class="operator">%</button>
+                <button class="operator">/</button>
+            </div>
+            <div class="Row">
+                <button class="operand">7</button>
+                <button class="operand">8</button>
+                <button class="operand">9</button>
+                <button class="operator">*</button>
+            </div>
+            <div class="Row">
+                <button class="operand">4</button>
+                <button class="operand">5</button>
+                <button class="operand">6</button>
+                <button class="operator">-</button>
+            </div>
+            <div class="Row">
+                <button class="operand">2</button>
+                <button class="operand">3</button>
+                <button class="operand">4</button>
+                <button class="operator">+</button>
+            </div>
+            <div class="Row">    
+                <button class="operand0">0</button>
+                <button class="operand">.</button>
+                <button class="operator">=</button>
+            </div>
+        </div>
+    </div>
     <script src="./myScript.js"></script>
 </body>
 </html>
