--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="Calculator">
+            <div class="display"><div class="display0">9</div></div>
             <div class="Row">
                 <button class="operator">AC</button>
                 <button class="operator">C</button>
