add 0 division error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="Calculator">
             <div class="display"><div class="display0"></div></div>
             <div class="Row">
-                <button class="operator">AC</button>
+                <button class="operator" onclick="location.reload()">AC</button>
                 <button class="operator">C</button>
                 <button class="operator">%</button>
                 <button class="operator" onclick="dis('/')">/</button>
