add decimal point and its operations

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="Row">    
                 <button id="operand0" value="0" onclick="dis(0)">0</button>
-                <button id="operand">.</button>
+                <button id="operand" onclick="dis('.')">.</button>
                 <button class="operator" onclick="dis('=')">=</button>
             </div>
         </div>
