--- a/check.html
+++ b/check.html
@@ -10,8 +10,11 @@
         let s = "123";
         let d = parseInt(s);
         let a = 12.3;
-        let b = 123;
-        console.log(a%1,b%1);
+        let b =15;
+        a = a.toString();
+        a = a + b;
+        a = parseFloat(a);
+        console.log(typeof a, a);
     </script>
 </body>
 </html>
