--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="Row">
                 <button class="operator" onclick="location.reload()">AC</button>
                 <button class="operator">C</button>
-                <button class="operator">%</button>
+                <button class="operator" onclick="dis('%')">%</button>
                 <button class="operator" onclick="dis('/')">/</button>
             </div>
             <div class="Row">
