--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
         </div>
     </div>
     <script src="./myScript.js"></script>
+    <footer class="footer">
+        <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> <a href="https://github.com/ASRoshanKrishna/Calculator">ASRoshanKrishna</a></p>
+    </footer>
 </body>
 </html>
