debug 0division function

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="Calculator">
-            <div class="display"><div class="display0"></div></div>
+            <div class="display"><div class="display0">0</div></div>
             <div class="Row">
                 <button class="operator" onclick="location.reload()">AC</button>
                 <button class="operator">C</button>
