add backspace func

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="display"><div class="display0">0</div></div>
             <div class="Row">
                 <button class="operator" onclick="location.reload()">AC</button>
-                <button class="operator">C</button>
+                <button class="operator" onclick="backspace()">C</button>
                 <button class="operator" onclick="perc()">%</button>
                 <button class="operator" id="op1" onclick="dis('/')">/</button>
             </div>
