--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
         <div class="Calculator">
             <div class="display"><div class="display0">0</div></div>
             <div class="Row">
-                <button class="operator" onclick="location.reload()">AC</button>
-                <button class="operator" onclick="backspace()">C</button>
-                <button class="operator" onclick="perc()">%</button>
-                <button class="operator" id="op1" onclick="dis('/')">/</button>
+                <button tabindex="-1" class="operator" onclick="location.reload()">AC</button>
+                <button tabindex="-1" class="operator" onclick="backspace()">C</button>
+                <button tabindex="-1" class="operator" onclick="perc()">%</button>
+                <button tabindex="-1" class="operator" id="op1" onclick="dis('/')">/</button>
             </div>
             <div class="Row">
-                <button id="operand" value="7" onclick="dis(7)">7</button>
-                <button id="operand" value="8" onclick="dis(8)">8</button>
-                <button id="operand" value="9" onclick="dis(9)">9</button>
-                <button class="operator" id="op2" onclick="dis('*')">*</button>
+                <button tabindex="-1" id="operand" value="7" onclick="dis(7)">7</button>
+                <button tabindex="-1" id="operand" value="8" onclick="dis(8)">8</button>
+                <button tabindex="-1" id="operand" value="9" onclick="dis(9)">9</button>
+                <button tabindex="-1" class="operator" id="op2" onclick="dis('*')">*</button>
             </div>
             <div class="Row">
-                <button id="operand" value="4" onclick="dis(4)">4</button>
-                <button id="operand" value="5" onclick="dis(5)">5</button>
-                <button id="operand" value="6" onclick="dis(6)">6</button>
-                <button class="operator" id="op3" onclick="dis('-')">-</button>
+                <button tabindex="-1" id="operand" value="4" onclick="dis(4)">4</button>
+                <button tabindex="-1" id="operand" value="5" onclick="dis(5)">5</button>
+                <button tabindex="-1" id="operand" value="6" onclick="dis(6)">6</button>
+                <button tabindex="-1" class="operator" id="op3" onclick="dis('-')">-</button>
             </div>
             <div class="Row">
-                <button id="operand" value="1" onclick="dis(1)">1</button>
-                <button id="operand" value="2" onclick="dis(2)">2</button>
-                <button id="operand" value="3" onclick="dis(3)">3</button>
-                <button class="operator" id="op4" onclick="dis('+')">+</button>
+                <button tabindex="-1" id="operand" value="1" onclick="dis(1)">1</button>
+                <button tabindex="-1" id="operand" value="2" onclick="dis(2)">2</button>
+                <button tabindex="-1" id="operand" value="3" onclick="dis(3)">3</button>
+                <button tabindex="-1" class="operator" id="op4" onclick="dis('+')">+</button>
             </div>
             <div class="Row">    
-                <button id="operand0" value="0" onclick="dis(0)">0</button>
-                <button id="operand" onclick="dis('.')">.</button>
-                <button class="operator" onclick="dis('=')">=</button>
+                <button tabindex="-1" id="operand0" value="0" onclick="dis(0)">0</button>
+                <button tabindex="-1" id="operand" onclick="dis('.')">.</button>
+                <button tabindex="-1" class="operator" onclick="dis('=')">=</button>
             </div>
         </div>
     </div>
